--- a/css/main.css
+++ b/css/main.css
@@ -3370,7 +3370,7 @@ body {
 .layouts__item_image {
   height: 100%;
   max-height: 32.6875rem;
-  margin: 0 7.5rem;
+  margin: 1.25rem 7.5rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -3403,7 +3403,6 @@ body {
 
 .layouts__item_image img {
   width: 100%;
-  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
